--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.6d195049ca1fa78bb354.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.e254f6b9bf511460eb6d.js"></script><script type="text/javascript" src="main.9b5c5ee08f21f9487183.js"></script></body>
 </html>
